--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
+        "nesbot/carbon": "^1.29",
         "realrashid/sweet-alert": "^1.1",
         "yajra/laravel-datatables-oracle": "^7.10"
     },
